# ITensor

./: .gitignore  CMakeLists.txt  Checklists.txt  FindMKL.cmake  INSTALL  INSTALL.md  LICENSE  Makefile  README  README.md  ROADMAP  V3_ROADMAP  cmake_run_script.sh  itensors.pc.in  options.mk.sample
itensor/: BaseDMRGOpts.h  BaseDMRGWorker.h  CMakeLists.txt  DMRGObserver.h  DMRGOpts.h  DMRGWorker.h  Makefile  Makefile.default  Sweeps.h  TEvolObserver.h  algorithm.cc  algorithm.h  all.h  all_basic.h  all_mps.h  allocator.h  arrow.h  autompo.cc  autompo.h  bondgate.h  combiner.h  condenser.cc  condenser.h  contract.cc  contract.h  core.h  counter.h  cppversion.h  decomp.cc  decomp.h  decomp_impl.h  dmrg.cc  dmrg.h  eigensolver.h  fermion.h  global.cc  global.h  hambuilder.h  hams.h  hermitian.cc  (+92 more)
itensor/.profiling/: count_copies.h
itensor/detail/: algs.h  call_rewrite.h  functions.h  gcounter.h  printing.h  safe_ptr.h  skip_iterator.h
itensor/hams/: ExtendedHubbard.h  Heisenberg.h  HubbardChain.h  Ising.h  J1J2Chain.h  TriHeisenberg.h  heisenberg.h  hubbardchain.h  tJChain.h  triheisenberg.h
itensor/itdata/: applyfunc.h  combiner.cc  combiner.h  dense.cc  dense.h  diag.cc  diag.h  dotask.h  dotask_templates.h  iqtcombiner.cc  iqtcombiner.h  iqtdata.cc  iqtdata.h  iqtdense.h  iqtdiag.cc  iqtdiag.h  iqtreal.cc  iqtreal.h  itcombiner.cc  itcombiner.h  itcplx.cc  itcplx.h  itdata.h  itdelta.h  itdense.h  itdensecplx.h  itdiag.cc  itdiag.h  itlazy.cc  itlazy.h  itreal.cc  itreal.h  qcombiner.cc  qcombiner.h  qdense.cc  qdense.h  qdiag.cc  qdiag.h  qmixed.cc  qmixed.h  (+7 more)
itensor/lattice/: latticebond.h  square.h  triangular.h
itensor/matrix/: algs.cc  algs.h  bigmatrix.h  bigtimeit.cc  conjugate_gradient.cc  contract.cc  contract.h  david.cc  davidson.h  daxpy.cc  lapack_wrap.h  mat.cc  mat.h  matiter.h  matrange.h  matrix.cc  matrix.h  matrix_algs.cc  matrix_algs.h  matrixref.cc  matrixref.h  miterator.h  mrange.h  permutation.h  range.h  rangeiter.h  simplematrix.cc  simplematrix.h  slicemat.h  slicerange.h  sliceten.h  sparse.cc  sparse.h  sparseref.cc  sparseref.h  sparseref2.cc  sparseref2.h  storelink.cc  storelink.h  strideiter.h  (+15 more)
itensor/model/: Z3.h  hubbard.h  spinhalf.h  spinless.h  spinmodels.h  spinone.h  tj.h
itensor/mps/: DMRGObserver.h  DMRGObserver1.h  TEvolObserver.h  autompo.cc  autompo.h  bondgate.h  dmrg.h  dmrg1.h  hambuilder.h  idmrg.h  integrators.h  localmpo.h  localmpo_mps.h  localmposet.h  localop.h  master_autompo.h  mpo.cc  mpo.h  mpo.ih  mpo_impl.h  mpoalgs.cc  mps.cc  mps.h  mps.ih  mps_impl.h  mpsalgs.cc  observer.h  siteset.h  sweeps.h  tdvp.h  tevol.cc  tevol.h
itensor/mps/hams/: ExtendedHubbard.h  Heisenberg.h  HubbardChain.h  Ising.h  J1J2Chain.h  TriHeisenberg.h  tJChain.h
itensor/mps/lattice/: latticebond.h  square.h  triangular.h
itensor/mps/sites/: Z3.h  boson.h  customspin.h  electron.h  fermion.h  hubbard.h  kondo.h  spinhalf.h  spinhalfint.h  spinint.h  (+4 more)
itensor/sites/: Z3.h  hubbard.h  spinhalf.h  spinless.h  spinone.h  tj.h
itensor/tensor/: algs.cc  algs.h  algs.ih  algs_impl.h  cmake_lapack_wrap.cc  contract.cc  contract.h  contract.ih  contract_impl.h  extra-svds.cc  extra-svds.h  gemm.cc  lapack_wrap.cc  lapack_wrap.h  mat.cc  mat.h  mat.ih  mat_impl.h  matrange.h  permutation.h  permute.h  range.h  rangeiter.h  slicemat.h  slicerange.h  sliceten.h  ten.h  ten.ih  ten_impl.h  teniter.h  types.h  vec.cc  vec.h  vecrange.h
itensor/util/: Makefile  args.cc  args.h  autovector.h  count.h  cplx_literal.h  cputime.cc  cputime.h  error.cc  error.h  flstring.h  h5.h  h5.hpp  indent.h  infarray.h  input.cc  input.h  iterate.h  itertools.h  minmax.h  multalloc.h  optional_ptr.h  parallel.h  print.h  print_macro.h  range.h  readwrite.h  safe_ptr.h  set_scoped.h  static_count.h  stats.h  stdx.h  str.h  tarray1.cc  tensorstats.h  testinput.cc  timers.h  tinyformat.h  typelist.h  types.h  (+2 more)
matrix/: CMakeLists.txt  Makefile  acml_david.cc  acml_utility.cc  bigmatrix.h  bigtimeit.cc  conjugate_gradient.cc  conjugate_gradient.h  david.cc  davidson.h  daxpy.cc  dgemm.cc  hpsortir.cc  lapack_wrap.h  macos_david.cc  macos_utility.cc  matrix.cc  matrix.h  matrix.ih  matrixref.cc  matrixref.h  mkl_utility.cc  sparse.cc  sparse.h  sparseref.h  storelink.cc  storelink.h  svd.cc  svd.h  testmat.cc  timeit.cc  timeit2.cc  utility.cc
matrix/archive/: macos_utility.cc
matrix/intel/: Makefile  Makefile.default  david.cc  daxpy.cc  dgemm.cc  hpsortir.cc  matrix.cc  matrix.h  matrix.ih  matrixref.cc  matrixref.h  matrixref.ih  precisio.h  sparse.cc  sparse.h  sparseref.cc  sparseref.h  sparseref2.h  storelink.h  svd.h  testmat.cc  timeit.cc  timeit2.cc  utility.cc
matrix/macos/: Makefile  Makefile.default  conjugate_gradient.cc  david.cc  matrix.cc  matrix.h  matrix.ih  matrixref.cc  matrixref.h  matrixref.ih  sparse.cc  sparse.h  sparseref.cc  sparseref.h  sparseref2.cc  storelink.h  svd.cc  testmat.cc  utility.cc
unittest/: CMakeLists.txt  ExpHeisenberg.h  ExpIsing.h  Makefile  algorithm_test.cc  args_test.cc  autompo_test.cc  bondgate_test.cc  catch.hpp  combiner_test.cc  combiner_test.h  contract_test.cc  decomp_test.cc  eigensolver_test.cc  extra-svds_test.cc  hdf5_test.cc  index_test.cc  index_test.h  indexset_test.cc  iqcombiner_test.cc  iqindex_test.cc  iqindexset_test.cc  iqtensor_test.cc  iqtsparse_test.cc  itensor_test.cc  itensor_test.h  iterativesolvers_test.cc  itsparse_test.cc  localmpo_test.cc  localop_test.cc  matrix_test.cc  model_test.cc  mpo_test.cc  mps_mpo_test_helper.h  mps_test.cc  option_test.cc  qn_test.cc  real_test.cc  real_test.h  regression_test.cc  (+15 more)
utilities/: CMakeLists.txt  Makefile  Makefile.default  args.cc  args.h  array2.cc  array2.h  autovector.h  complex.h  count.h  cplx_literal.h  cppversion.h  cputime.cc  cputime.h  error.cc  error.h  flstring.h  hash.cc  hash.h  indent.h  indexx.cc  infarray.h  input.cc  input.h  intarray2.cc  intarray2.h  multalloc.h  option.cc  option.h  optional_ptr.h  print.h  ran1.cc  safe_ptr.h  safebool.h  set_scoped.h  tarray1.cc  tarray1.h  testarray.cc  testinput.cc  timers.h  (+3 more)
(+164 files in other folders)
